{
    "name": "InputActions",
    "maps": [
        {
            "name": "Generals",
            "id": "ea9fe4ff-7ddc-4e3c-a3fb-d799399d88b9",
            "actions": [
                {
                    "name": "LeftGrip",
                    "type": "Button",
                    "id": "0d8e50f5-6fef-482d-a52a-098dd8010988",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightGrip",
                    "type": "Button",
                    "id": "30ae484b-5105-479a-bb7e-d37f9b4e821c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryButtonLeft",
                    "type": "Button",
                    "id": "2afde089-ac07-4398-a73c-74ad6f6f708a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db900cd2-9d41-4884-941e-1d81896ac127",
                    "path": "<XRController>{LeftHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "232d841c-2385-4f58-9e49-0443548e2e64",
                    "path": "<XRController>{RightHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05f62c82-f63f-42a0-b3d2-e86722bfb6be",
                    "path": "<XRController>{LeftHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}